# py-nest-thermostat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.yaml.sample  docker-compose.yaml  pyproject.toml  tbump.toml  test.json  todo.md
changelog/: 8.feature.md  8.misc.md
nest/: main.py
py_nest_thermostat/: __init__.py  auth.py  config.py  database.py  logger.py  main.py  models.py  nest_api.py
py_nest_thermostat/connectors/: base.py  cockroach_db.py  postgres.py
