[tool.poetry]
name = "py-nest-thermostat"
version = "0.0.0-a4"
description = "A Python CLI Nest Thermostat controller and dashborading tool"
authors = ["Bastien Boutonnet <bastien.b1@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
keywords = ["cli-app", "nest", "google", "iot"]
repository = "https://github.com/bastienboutonnet/py-nest-thermostat"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
questionary = "^1.10.0"
cleo = "^0.8.1"
pydantic = "^1.8.2"
rich = "^10.13.0"
SQLAlchemy = "^1.4.27"
psycopg2 = "^2.9.1"
sqlalchemy-cockroachdb = "^1.4.2"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
ipython = "^7.29.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nest="py_nest_thermostat.main:application.run"
